@@ -18,6 +18,9 @@ Bugs fixed
 * #1499: With non-callable `setup` in a conf.py, now sphinx-build emits
   user-friendly error message.
 * #1502: In autodoc, fix display of parameter defaults containing backslashes.
+* #1226: autodoc, autosummary: importing setup.py by automodule will invoke
+  setup process and execute `sys.exit()`. Now sphinx avoids SystemExit
+  exception and emits warnings without unexpected termination.
 
 Release 1.2.2 (released Mar 2, 2014)
 ====================================
